--- a/style.css
+++ b/style.css
@@ -38,12 +38,12 @@
 
 .btn-cta {
     display:inline-block;
-    padding:15px;
+    padding:15px 30px;
     border-radius:4px;
-    width:100%;
     text-align:center;
-    background-color:#000;
+    background-color:#ff0000;
     color:#fff;
+    font-weight:700;
 }
 
 .section-weight {
