--- a/public/lib/css/style.css
+++ b/public/lib/css/style.css
@@ -165,3 +165,21 @@
     to {background-position:100% 100%}
 }
 
+
+.panel-form {
+    box-shadow:2px 2px 100px rgba(0,0,0,0.1);
+    padding:50px;
+}
+
+.btn-submit {
+    background-color:#ff0000;
+    width:100%;
+    display:block;
+    border:0px;
+}
+
+.form-control {
+    box-shadow:2px 2px 30px rgba(0,0,0,0.1);
+    border:1px solid #ddd;
+}
+
