--- a/public/lib/css/style.css
+++ b/public/lib/css/style.css
@@ -44,6 +44,15 @@
     background-color:#ff0000;
     color:#fff;
     font-weight:700;
+    animation:0.2s ease;
+}
+
+.btn-cta:hover {
+    color:#fff;
+    animation:0.2s ease;
+    background-color:#990000;
+    text-decoration:none;
+    
 }
 
 .section-weight {
