--- a/public/lib/css/style.css
+++ b/public/lib/css/style.css
@@ -192,3 +192,18 @@
     border:1px solid #ddd;
 }
 
+@media(max-width:767px) {
+
+}
+
+@media(min-width:768px) {
+
+}
+
+@media(min-width:997px) {
+
+}
+
+@media(min-width:1200px) {
+
+}
