--- a/public/lib/css/style.css
+++ b/public/lib/css/style.css
@@ -1,3 +1,6 @@
+body {
+    font-family: 'Roboto', sans-serif;
+}
 .navbar-basic {
     padding:5px;
     box-shadow:2px 2px 20px rgba(0,0,0,0.1);
@@ -26,10 +29,15 @@
     background-repeat:no-repeat;
     background-position:20% 30%;
     height:95vh;
+    padding-top:3vh;
+    background-size:270px;
+    background-position:50% 100%;
+    padding-bottom:10vh;
+    height:75vh;
 }
 
 .hero-text-box {
-    margin-top:12vh;
+    margin-top:17vh;
 }
 
 .hero-headline-one {
@@ -114,7 +122,7 @@
 }
 
 .panel-weight-circle-gram {
-    font-size:16px;
+    font-size:22px;
 }
 
 .headline-block {
@@ -156,14 +164,14 @@
       animation-timing-function: linear;
     border:1px solid #f00;
     border-radius:50%;
-    height:95vh;
-    width:95vh;
+    height:40vh;
+    width:40vh;
+    padding-top:9vh;
     margin:0 auto;
-    padding:10vh;
-    padding-top:35vh;
+    margin-top:18vh;
     box-shadow:0px 0px 300px rgba(255,0,0,0.7);
-
 }
+
 @keyframes example {
     from {background-position:0% 0%}
     to {background-position:100% 100%}
@@ -173,6 +181,7 @@
     from {background-position:0% 0%}
     to {background-position:100% 100%}
 }
+
 
 
 .panel-form {
@@ -193,17 +202,171 @@
 }
 
 @media(max-width:767px) {
+    .jumbo-hero {
+    }
 
+    .hero-text-box {
+        text-align:center;
+        margin-top:5vh;
+        margin-bottom:0vh
+    }
+
+    .hero-headline-one {
+        font-size:1.3em;
+    }
+
+    .section-weight {
+        padding-top:5vh;
+    }
+
+    .panel-weight {
+        margin-top:5vh;
+        padding:1vh;
+    }
+
+    .panel-weight-circle-text {
+        font-size:3.5em;
+    }
+
+    .feature-text-box {
+        padding-top:5vh;
+    }
+
+    .section-scanner {
+        height:80vh;
+    }
+
+    .cta-scanner-zoom {
+        height:40vh;
+        width:40vh;
+        padding:5vh;
+        padding-top:13vh;
+        margin-top:18vh;
+    }
+
+    .headline-block-title {
+        font-size:1.2em;
+    }
+
+    .headline-block-title span {
+        font-size:2.5em
+    }
+
+    .section-specs {
+        margin-top:5vh;
+    }
 }
 
 @media(min-width:768px) {
+    .jumbo-hero {
+        background-size:50%;
+        background-position:50% 90%;
+    }
 
+    .hero-text-box {
+        margin-top:5vh;
+        text-align:center;
+    }
+
+    .section-weight {
+        padding-top:0vh;
+    }
+
+    .feature-text-box {
+        margin-bottom:5vh;
+    }
+
+    .panel-weight {
+        padding:2vh 0vh;
+        margin-top:5vh;
+    }
+
+    .panel-weight-circle-text {
+        font-size:2.5em;
+    }
+
+    .section-specs {
+        margin-top:5vh;
+    }
+    .cta-scanner-zoom {
+        padding:5vh;
+        padding-top:12vh;
+    }
+
+    .headline-block-title {
+
+    }
+
+    .headline-block-title span {
+        font-size:2.7em
+    }
 }
 
 @media(min-width:997px) {
+    .jumbo-hero {
+        background-position:0% 50%;
+        background-size:70vh;
+        padding-top:0px;
+        height:80vh;
+    }
 
+    .hero-text-box {
+        margin-top:20vh;
+        text-align:left;
+    }
+
+    .feature-text-box {
+        padding:5vh 0;
+    }
+
+    .feature-text-box-specs {
+        padding-top:0;
+    }
+
+    .cta-scanner-zoom {
+        height:70vh;
+        width:70vh;
+        padding:15vh;
+        padding-top:24vh;
+        margin-top:18vh;
+    }
+
+    .headline-block-title span {
+        font-size:2.9em
+    }
 }
 
 @media(min-width:1200px) {
+    .jumbo-hero {
+        background-size:720px auto;
+        background-repeat:no-repeat;
+        background-position:20% 30%;
+        height:95vh;
+    }
+    .hero-text-box {
+        margin-top:25vh;
+    }
 
+    .section-weight {
+        padding-top:5vh;
+    }
+
+    .feature-text-box {
+        padding-top:7vh;
+    }
+
+    .feature-text-box-specs {
+        padding-top:4vh;
+    }
+    .cta-scanner-zoom {
+        height:95vh;
+        width:95vh;
+        margin:0 auto;
+        padding:10vh;
+        padding-top:36vh;
+    }
+
+    .headline-block-title span {
+        font-size:5em
+    }
 }
