--- a/public/lib/css/style.css
+++ b/public/lib/css/style.css
@@ -183,6 +183,27 @@ body {
 }
 
 
+.games-headline {
+    font-weight:700;
+    margin-bottom:20px;
+    font-size:2em;
+    color:#000;
+    text-shadow:2px 2px 300px rgba(0,0,0,0.4);
+    text-stroke:1px black;
+}
+
+.games-image-box {
+    box-shadow:2px 2px 50px rgba(0,0,0,0.2);
+    border-radius:10px;
+    margin-top:5vh;
+}
+
+.games-image {
+    object-fit:cover;
+    width:100%;
+    height:180px;
+    border-radius:10px;
+}
 
 .panel-form {
     box-shadow:2px 2px 100px rgba(0,0,0,0.1);
@@ -199,6 +220,13 @@ body {
 .form-control {
     box-shadow:2px 2px 30px rgba(0,0,0,0.1);
     border:1px solid #ddd;
+}
+
+.footer {
+    border-top:1px solid #eee;
+    padding-top:10vh;
+    padding-bottom:10vh;
+    background-color:#fafafa;
 }
 
 @media(max-width:767px) {
@@ -334,6 +362,10 @@ body {
     .headline-block-title span {
         font-size:2.9em
     }
+    
+    .games-image {
+        height:130px;
+    }
 }
 
 @media(min-width:1200px) {
@@ -369,4 +401,18 @@ body {
     .headline-block-title span {
         font-size:5em
     }
+
+    .games-image {
+        height:150px;
+    }
+
+    .games-headline {
+        font-weight:700;
+        margin-bottom:-135px;
+        font-size:11em;
+        color:#fff;
+        text-shadow:2px 2px 300px rgba(0,0,0,0.4);
+        text-stroke:1px black;
+    }
+
 }
