--- a/public/lib/css/style.css
+++ b/public/lib/css/style.css
@@ -181,6 +181,32 @@ body {
     to {background-position:100% 100%}
 }
 
+/* section wire */
+.section-wire-subheading {
+	letter-spacing:10px;
+}
+
+.section-wire-heading {
+	font-size:6em;
+	line-height:1em;
+}
+
+.section-wire {
+	background-color:#000;
+	color:#fff;
+	text-align:center;
+	margin-bottom:10vh;
+}
+
+.section-wire-image {
+	width:100%;
+}
+
+.section-wire-text-box {
+	width:100%;
+	padding:15vh 5vh;
+	
+}
 
 .games-headline {
     font-weight:700;
@@ -294,6 +320,16 @@ body {
     .section-specs {
         margin-top:5vh;
     }
+
+	.section-wire-subheading {
+		letter-spacing:10px;
+	}
+
+	.section-wire-heading {
+		font-size:3em;
+		line-height:1em;
+	}
+
 }
 
 @media(min-width:768px) {
@@ -339,6 +375,7 @@ body {
     .headline-block-title span {
         font-size:2.7em
     }
+
 }
 
 @media(min-width:997px) {
@@ -373,7 +410,29 @@ body {
     .headline-block-title span {
         font-size:2.9em
     }
-    
+  
+	.section-wire {
+		text-align:left;
+	}
+
+	.section-wire-image {
+		object-fit:cover;
+		height:100%;
+	}
+
+	.section-wire-text-box {
+		padding:10vh;
+	}
+
+	.section-wire-subheading {
+		font-size:14px;
+	}
+
+	.section-wire-heading {
+		font-size:2.8em;
+		margin-bottom:20px;
+	}
+
     .games-image {
         height:130px;
     }
@@ -413,6 +472,15 @@ body {
         font-size:5em
     }
 
+
+	.section-wire-heading {
+		font-size:6em;
+	}
+
+	.section-wire-text-box {
+		padding:10vh;
+		width:65%;
+	}
     .games-image {
         height:150px;
     }
