--- a/public/lib/css/style.css
+++ b/public/lib/css/style.css
@@ -33,6 +33,7 @@ body {
     background-position:50% 100%;
     padding-bottom:10vh;
     height:75vh;
+    margin-bottom:0;
 }
 
 .hero-text-box {
@@ -65,6 +66,10 @@ body {
 .section-weight {
     padding-bottom:10vh;
     padding-top:10vh;
+    background-image:url('/lib/img/owl4.webp');
+    background-size:120vh;
+    background-repeat:no-repeat;
+    background-position:10% 100%;
 }
 
 .feature-text-box {
@@ -168,6 +173,8 @@ body {
     padding-top:9vh;
     margin:0 auto;
     margin-top:18vh;
+    -webkit-box-shadow:0px 0px 300px rgba(255,0,0,0.7);
+    -moz-box-shadow:0px 0px 300px rgba(255,0,0,0.7);
     box-shadow:0px 0px 300px rgba(255,0,0,0.7);
 }
 
@@ -474,11 +481,11 @@ body {
 
 
 	.section-wire-heading {
-		font-size:6em;
+		font-size:5em;
 	}
 
 	.section-wire-text-box {
-		padding:10vh;
+		padding:15vh 10vh;
 		width:65%;
 	}
     .games-image {
