--- a/public/lib/css/style.css
+++ b/public/lib/css/style.css
@@ -189,6 +189,10 @@ body {
 }
 
 /* section wire */
+.container-wire {
+	padding:0;
+}
+
 .section-wire-subheading {
 	letter-spacing:10px;
 }
@@ -266,6 +270,7 @@ body {
     background-color:#fafafa;
 }
 
+
 @media(max-width:767px) {
     .jumbo-hero {
         background-image:none;
@@ -336,6 +341,13 @@ body {
 		font-size:3em;
 		line-height:1em;
 	}
+
+	.footer a {
+		margin-top:8vh;
+		margin-bottom:0vh;
+		display:inline-block;
+	}
+
 
 }
 
@@ -447,6 +459,7 @@ body {
     .games-image {
         height:130px;
     }
+
 }
 
 @media(min-width:1200px) {
